fix clipping when page is scrolled

--- a/src/style.css
+++ b/src/style.css
@@ -72,7 +72,7 @@ main {
   max-width: 600px;
   padding-inline: 1rem;
   margin: auto;
-  margin-bottom: 10vh;
+  padding-bottom: 10vh;
 
   display: flex;
   flex-direction: column;
